# parallel_programming

./: CMakeLists.txt
lab-1/src/: Consumer.h  Producer.h  Semaphore.h  SharedMemory.h  config.txt  lab-1  main.cpp
lab-2/src/: arbiter.hpp  car.hpp  main.cpp  message.hpp
